--- a/index.html
+++ b/index.html
@@ -21,11 +21,48 @@
     <!--=============== CSS ===============-->
     <link rel="stylesheet" href="assets/css/styles.css" />
 
-    <title>Montres</title>
+    <title>Valbern Horlogerie – Montres</title>
   </head>
   <body>
     <!--==================== HEADER ====================-->
-    <header class="header" id="header"></header>
+    <header class="header" id="header">
+      <nav class="nav container">
+        <a href="#" class="nav__logo">
+          <i class="bx bxs-watch nav__logo-icon"></i> Valbern
+        </a>
+
+        <div class="nav__menu" id="nav-menu">
+          <ul class="nav__list">
+            <li class="nav__item">
+              <a href="#home" class="nav__link active-link">Accueil</a>
+            </li>
+            <li class="nav__item">
+              <a href="#featured" class="nav__link">Sélection</a>
+            </li>
+            <li class="nav__item">
+              <a href="#products" class="nav__link">Produits</a>
+            </li>
+            <li class="nav__item">
+              <a href="#new" class="nav__link">Nouveautés</a>
+            </li>
+          </ul>
+
+          <div class="nav__close" id="nav-close">
+            <i class="bx bx-x"></i>
+          </div>
+        </div>
+
+        <div class="nav__btns">
+          <div class="nav__shop" id="cart-shop">
+            <i class="bx bx-shopping-bag"></i>
+          </div>
+
+          <div class="nav__toggle" id="nav-toggle">
+            <i class="bx bx-grid-alt"></i>
+          </div>
+        </div>
+      </nav>
+    </header>
 
     <!--==================== CART ====================-->
     <div class="cart" id="cart"></div>
