--- a/index.html
+++ b/index.html
@@ -70,7 +70,50 @@
     <!--==================== MAIN ====================-->
     <main class="main">
       <!--==================== HOME ====================-->
-      <section class="home" id="home"></section>
+      <section class="home" id="home">
+        <div class="home__container container grid">
+          <div class="home__img-bg">
+            <img src="assets/img/home.png" alt="" class="home__img" />
+          </div>
+
+          <div class="home__social">
+            <a
+              href="https://www.facebook.com/"
+              target="_blank"
+              class="home__social-link"
+              >Facebook</a
+            >
+            <a
+              href="https://twitter.com/"
+              target="_blank"
+              class="home__social-link"
+              >Twitter</a
+            >
+            <a
+              href="https://www.instagram.com/"
+              target="_blank"
+              class="home__social-link"
+              >Instagram</a
+            >
+          </div>
+
+          <div class="home__data">
+            <h1 class="home__title">DERNIERE PIECE<br />COLLECTION B720</h1>
+            <p class="home__description">
+              Dernière arrivée de la série B720 importée, au design moderne et
+              résistant.
+            </p>
+            <span class="home__price">1245 €</span>
+
+            <div class="home__btns">
+              <a href="#" class="button button--gray button--small"
+                >Découvrir</a
+              >
+              <button class="button home__button">AJOUTER AU PANIER</button>
+            </div>
+          </div>
+        </div>
+      </section>
 
       <!--==================== FEATURED ====================-->
       <section class="featured section container" id="featured"></section>
