add featured section

--- a/index.html
+++ b/index.html
@@ -116,7 +116,41 @@
       </section>
 
       <!--==================== FEATURED ====================-->
-      <section class="featured section container" id="featured"></section>
+      <section class="featured section container" id="featured">
+        <h2 class="section__title">Vedette</h2>
+
+        <div class="featured__container grid">
+          <article class="featured__card">
+            <span class="featured__tag">Promo</span>
+            <img src="assets/img/featured1.png" alt="" class="featured__img" />
+            <div class="featured__data">
+              <h3 class="featured__title">Jazzmaster</h3>
+              <span class="featured__price">1050 €</span>
+            </div>
+            <button class="button featured__button">AJOUTER AU PANIER</button>
+          </article>
+
+          <article class="featured__card">
+            <span class="featured__tag">Promo</span>
+            <img src="assets/img/featured2.png" alt="" class="featured__img" />
+            <div class="featured__data">
+              <h3 class="featured__title">Ingersoll</h3>
+              <span class="featured__price">690 €</span>
+            </div>
+            <button class="button featured__button">AJOUTER AU PANIER</button>
+          </article>
+
+          <article class="featured__card">
+            <span class="featured__tag">Promo</span>
+            <img src="assets/img/featured3.png" alt="" class="featured__img" />
+            <div class="featured__data">
+              <h3 class="featured__title">Or rose</h3>
+              <span class="featured__price">890 €</span>
+            </div>
+            <button class="button featured__button">AJOUTER AU PANIER</button>
+          </article>
+        </div>
+      </section>
 
       <!--==================== STORY ====================-->
       <section class="story section container"></section>
