--- a/index.html
+++ b/index.html
@@ -153,7 +153,24 @@
       </section>
 
       <!--==================== STORY ====================-->
-      <section class="story section container"></section>
+      <section class="story section container">
+        <div class="story__container grid">
+          <div class="story__data">
+            <h2 class="section__title story__section-title">Notre Histoire</h2>
+            <h1 class="story__title">Montre Inspirante de Cette Année</h1>
+            <p class="story__description">
+              Les montres les plus récentes et modernes de cette année sont
+              disponibles dans diverses versions, découvrez-les dès maintenant.
+            </p>
+            <a href="#" class="button button--small">Découvrir</a>
+          </div>
+
+          <div class="story__images">
+            <img src="assets/img/story.png" alt="" class="story__img" />
+            <div class="story__square"></div>
+          </div>
+        </div>
+      </section>
 
       <!--==================== PRODUCTS ====================-->
       <section class="products section container" id="products"></section>
