add testimonial section

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       href="https://cdn.jsdelivr.net/npm/boxicons@latest/css/boxicons.min.css" />
 
     <!--=============== SWIPER CSS ===============-->
-    <link rel="stylesheet" href="" />
+    <link rel="stylesheet" href="assets/css/swiper-bundle.min.css" />
 
     <!--=============== CSS ===============-->
     <link rel="stylesheet" href="assets/css/styles.css" />
@@ -225,7 +225,100 @@
       </section>
 
       <!--==================== TESTIMONIAL ====================-->
-      <section class="testimonial section container"></section>
+      <section class="testimonial section container">
+        <div class="testimonial__container grid">
+          <div class="swiper testimonial-swiper">
+            <div class="swiper-wrapper">
+              <div class="testimonial__card swiper-slide">
+                <div class="testimonial__quote">
+                  <i class="bx bxs-quote-alt-left"></i>
+                </div>
+                <p class="testimonial__description">
+                  Ce sont les meilleures montres que l’on peut acquérir,
+                  toujours à la pointe des nouveautés et tendances, à un prix
+                  très abordable et avec une attention sans faille à vos
+                  questions.
+                </p>
+                <h3 class="testimonial__date">27 mars 2021</h3>
+                <div class="testimonial__perfil">
+                  <img
+                    src="assets/img/testimonial1.jpg"
+                    alt=""
+                    class="testimonial__perfil-img" />
+                  <div class="testimonial__perfil-data">
+                    <span class="testimonial__perfil-name">Lee Doe</span>
+                    <span class="testimonial__perfil-detail"
+                      >Directeur d’une entreprise</span
+                    >
+                  </div>
+                </div>
+              </div>
+              <div class="testimonial__card swiper-slide">
+                <div class="testimonial__quote">
+                  <i class="bx bxs-quote-alt-left"></i>
+                </div>
+                <p class="testimonial__description">
+                  Ce sont les meilleures montres que l’on peut acquérir,
+                  toujours à la pointe des nouveautés et tendances, à un prix
+                  très abordable et avec une attention sans faille à vos
+                  questions.
+                </p>
+                <h3 class="testimonial__date">27 mars 2021</h3>
+                <div class="testimonial__perfil">
+                  <img
+                    src="assets/img/testimonial2.jpg"
+                    alt=""
+                    class="testimonial__perfil-img" />
+                  <div class="testimonial__perfil-data">
+                    <span class="testimonial__perfil-name">Samantha Mey</span>
+                    <span class="testimonial__perfil-detail"
+                      >Directrice d’une entreprise</span
+                    >
+                  </div>
+                </div>
+              </div>
+              <div class="testimonial__card swiper-slide">
+                <div class="testimonial__quote">
+                  <i class="bx bxs-quote-alt-left"></i>
+                </div>
+                <p class="testimonial__description">
+                  Ce sont les meilleures montres que l’on peut acquérir,
+                  toujours à la pointe des nouveautés et tendances, à un prix
+                  très abordable et avec une attention sans faille à vos
+                  questions.
+                </p>
+                <h3 class="testimonial__date">27 mars 2021</h3>
+                <div class="testimonial__perfil">
+                  <img
+                    src="assets/img/testimonial3.jpg"
+                    alt=""
+                    class="testimonial__perfil-img" />
+                  <div class="testimonial__perfil-data">
+                    <span class="testimonial__perfil-name">Raul Zaman</span>
+                    <span class="testimonial__perfil-detail"
+                      >Directeur d’une entreprise</span
+                    >
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="swiper-button-next">
+              <i class="bx bx-right-arrow-alt"></i>
+            </div>
+            <div class="swiper-button-prev">
+              <i class="bx bx-left-arrow-alt"></i>
+            </div>
+          </div>
+
+          <div class="testimonial__images">
+            <div class="testimonial__square"></div>
+            <img
+              src="assets/img/testimonial.png"
+              alt=""
+              class="testimonial__img" />
+          </div>
+        </div>
+      </section>
 
       <!--==================== NEW ====================-->
       <section class="new section container" id="new"></section>
@@ -240,7 +333,7 @@
     <!--=============== SCROLL UP ===============-->
 
     <!--=============== SWIPER JS ===============-->
-    <script src=""></script>
+    <script src="assets/js/swiper-bundle.min.js"></script>
 
     <!--=============== MAIN JS ===============-->
     <script src="assets/js/main.js"></script>
