add new section

--- a/index.html
+++ b/index.html
@@ -321,7 +321,55 @@
       </section>
 
       <!--==================== NEW ====================-->
-      <section class="new section container" id="new"></section>
+      <section class="new section container" id="new">
+        <h2 class="section__title">Nouveautés</h2>
+
+        <div class="new__container">
+          <div class="swiper new-swiper">
+            <div class="swiper-wrapper">
+              <article class="new__card swiper-slide">
+                <span class="new__tag">Nouveau</span>
+                <img src="assets/img/new1.png" alt="" class="new__img" />
+                <div class="new__data">
+                  <h3 class="new__title">Longines rose</h3>
+                  <span class="new__price">980 €</span>
+                </div>
+                <button class="button new__button">AJOUTER AU PANIER</button>
+              </article>
+
+              <article class="new__card swiper-slide">
+                <span class="new__tag">Nouveau</span>
+                <img src="assets/img/new2.png" alt="" class="new__img" />
+                <div class="new__data">
+                  <h3 class="new__title">Jazzmaster</h3>
+                  <span class="new__price">1150 €</span>
+                </div>
+                <button class="button new__button">AJOUTER AU PANIER</button>
+              </article>
+
+              <article class="new__card swiper-slide">
+                <span class="new__tag">Nouveau</span>
+                <img src="assets/img/new3.png" alt="" class="new__img" />
+                <div class="new__data">
+                  <h3 class="new__title">Dreyfuss or</h3>
+                  <span class="new__price">750 €</span>
+                </div>
+                <button class="button new__button">AJOUTER AU PANIER</button>
+              </article>
+
+              <article class="new__card swiper-slide">
+                <span class="new__tag">Nouveau</span>
+                <img src="assets/img/new4.png" alt="" class="new__img" />
+                <div class="new__data">
+                  <h3 class="new__title">Portuguese rose</h3>
+                  <span class="new__price">1590 €</span>
+                </div>
+                <button class="button new__button">AJOUTER AU PANIER</button>
+              </article>
+            </div>
+          </div>
+        </div>
+      </section>
 
       <!--==================== NEWSLETTER ====================-->
       <section class="newsletter section container"></section>
