add newsletter section

--- a/index.html
+++ b/index.html
@@ -372,7 +372,25 @@
       </section>
 
       <!--==================== NEWSLETTER ====================-->
-      <section class="newsletter section container"></section>
+      <section class="newsletter section container">
+        <div class="newsletter__bg grid">
+          <div>
+            <h2 class="newsletter__title">Abonnez-vous à notre Newsletter</h2>
+            <p class="newsletter__description">
+              Ne manquez pas vos réductions. Abonnez-vous pour recevoir les
+              meilleures offres, remises, coupons, cadeaux et bien plus.
+            </p>
+          </div>
+
+          <form action="" class="newsletter__subscribe">
+            <input
+              type="email"
+              placeholder="Entrez votre email"
+              class="newsletter__input" />
+            <button class="button">S’ABONNER</button>
+          </form>
+        </div>
+      </section>
     </main>
 
     <!--==================== FOOTER ====================-->
