add footer section

--- a/index.html
+++ b/index.html
@@ -394,7 +394,61 @@
     </main>
 
     <!--==================== FOOTER ====================-->
-    <footer class="footer section"></footer>
+    <footer class="footer section">
+      <div class="footer__container container grid">
+        <div class="footer__content">
+          <h3 class="footer__title">Nos Informations</h3>
+          <ul class="footer__list">
+            <li>75001 − Paris</li>
+            <li>3 Place Vendôme</li>
+            <li>01 23 45 67 89</li>
+          </ul>
+        </div>
+        <div class="footer__content">
+          <h3 class="footer__title">À Propos</h3>
+          <ul class="footer__links">
+            <li><a href="#" class="footer__link">Centre d’Aide</a></li>
+            <li><a href="#" class="footer__link">Support Client</a></li>
+            <li><a href="#" class="footer__link">Notre Histoire</a></li>
+            <li><a href="#" class="footer__link">Droits d’Auteur</a></li>
+          </ul>
+        </div>
+        <div class="footer__content">
+          <h3 class="footer__title">Montres</h3>
+          <ul class="footer__links">
+            <li><a href="#" class="footer__link">Mécanique</a></li>
+            <li><a href="#" class="footer__link">Automatique</a></li>
+            <li><a href="#" class="footer__link">Quartz</a></li>
+            <li><a href="#" class="footer__link">Connectée</a></li>
+            <li><a href="#" class="footer__link">Hybride</a></li>
+          </ul>
+        </div>
+        <div class="footer__content">
+          <h3 class="footer__title">Social</h3>
+          <ul class="footer__social">
+            <a
+              href="https://www.facebook.com/"
+              target="_blank"
+              class="footer__social-link"
+              ><i class="bx bxl-facebook"></i
+            ></a>
+            <a
+              href="https://twitter.com/"
+              target="_blank"
+              class="footer__social-link"
+              ><i class="bx bxl-twitter"></i
+            ></a>
+            <a
+              href="https://www.instagram.com/"
+              target="_blank"
+              class="footer__social-link"
+              ><i class="bx bxl-instagram"></i
+            ></a>
+          </ul>
+        </div>
+      </div>
+      <span class="footer__copy"> &#169; Tous droits réservés </span>
+    </footer>
 
     <!--=============== SCROLL UP ===============-->
 
