--- a/index.html
+++ b/index.html
@@ -397,7 +397,7 @@
     <footer class="footer section">
       <div class="footer__container container grid">
         <div class="footer__content">
-          <h3 class="footer__title">Nos Informations</h3>
+          <h3 class="footer__title">Coordonnées</h3>
           <ul class="footer__list">
             <li>75001 − Paris</li>
             <li>3 Place Vendôme</li>
