--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -21,14 +21,14 @@
     <!--=============== CSS ===============-->
     <link rel="stylesheet" href="assets/css/styles.css" />
 
-    <title>Valbern Horlogerie – Montres</title>
+    <title>Valmad Horlogerie – Montres</title>
   </head>
   <body>
     <!--==================== HEADER ====================-->
     <header class="header" id="header">
       <nav class="nav container">
         <a href="#" class="nav__logo">
-          <i class="bx bxs-watch nav__logo-icon"></i> Valbern
+          <i class="bx bxs-watch nav__logo-icon"></i> Valmad
         </a>
 
         <div class="nav__menu" id="nav-menu">
@@ -37,7 +37,7 @@
               <a href="#home" class="nav__link active-link">Accueil</a>
             </li>
             <li class="nav__item">
-              <a href="#featured" class="nav__link">Sélection</a>
+              <a href="#featured" class="nav__link">Vedette</a>
             </li>
             <li class="nav__item">
               <a href="#products" class="nav__link">Produits</a>
@@ -53,6 +53,9 @@
         </div>
 
         <div class="nav__btns">
+          <!-- Theme Change Button -->
+          <i class="bx bx-moon change-theme" id="theme-button"></i>
+
           <div class="nav__shop" id="cart-shop">
             <i class="bx bx-shopping-bag"></i>
           </div>
@@ -311,19 +314,19 @@
                   <i class="bx bxs-quote-alt-left"></i>
                 </div>
                 <p class="testimonial__description">
-                  Ce sont les meilleures montres que l’on peut acquérir,
-                  toujours à la pointe des nouveautés et tendances, à un prix
-                  très abordable et avec une attention sans faille à vos
-                  questions.
+                  J’ai été agréablement surpris par la qualité de la montre,
+                  surtout à ce prix-là. Le design est moderne, elle tient super
+                  bien la route, et le service client a répondu à ma question en
+                  moins d’une heure. Je recommande à 100 % !
                 </p>
-                <h3 class="testimonial__date">27 mars 2021</h3>
+                <h3 class="testimonial__date">17 mars 2019</h3>
                 <div class="testimonial__perfil">
                   <img
                     src="assets/img/testimonial1.jpg"
                     alt=""
                     class="testimonial__perfil-img" />
                   <div class="testimonial__perfil-data">
-                    <span class="testimonial__perfil-name">Lee Doe</span>
+                    <span class="testimonial__perfil-name">Clément M.</span>
                     <span class="testimonial__perfil-detail"
                       >Directeur d’une entreprise</span
                     >
@@ -340,14 +343,14 @@
                   très abordable et avec une attention sans faille à vos
                   questions.
                 </p>
-                <h3 class="testimonial__date">27 mars 2021</h3>
+                <h3 class="testimonial__date">27 mars 2020</h3>
                 <div class="testimonial__perfil">
                   <img
                     src="assets/img/testimonial2.jpg"
                     alt=""
                     class="testimonial__perfil-img" />
                   <div class="testimonial__perfil-data">
-                    <span class="testimonial__perfil-name">Samantha Mey</span>
+                    <span class="testimonial__perfil-name">Sophie F.</span>
                     <span class="testimonial__perfil-detail"
                       >Directrice d’une entreprise</span
                     >
@@ -359,19 +362,19 @@
                   <i class="bx bxs-quote-alt-left"></i>
                 </div>
                 <p class="testimonial__description">
-                  Ce sont les meilleures montres que l’on peut acquérir,
-                  toujours à la pointe des nouveautés et tendances, à un prix
-                  très abordable et avec une attention sans faille à vos
-                  questions.
+                  Très belle montre, conforme à la description. Elle est
+                  élégante, légère et fonctionne parfaitement. J’ai même reçu un
+                  petit message de suivi après l’achat, ce qui montre que le
+                  service est vraiment sérieux. Une belle expérience d’achat.
                 </p>
-                <h3 class="testimonial__date">27 mars 2021</h3>
+                <h3 class="testimonial__date">01 octobre 2021</h3>
                 <div class="testimonial__perfil">
                   <img
                     src="assets/img/testimonial3.jpg"
                     alt=""
                     class="testimonial__perfil-img" />
                   <div class="testimonial__perfil-data">
-                    <span class="testimonial__perfil-name">Raul Zaman</span>
+                    <span class="testimonial__perfil-name">Franck V.</span>
                     <span class="testimonial__perfil-detail"
                       >Directeur d’une entreprise</span
                     >
