--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <!--=============== CSS ===============-->
     <link rel="stylesheet" href="assets/css/styles.css" />
 
-    <title>Valmad Horlogerie – Montres</title>
+    <title>Valmad Horlogerie</title>
   </head>
   <body>
     <!--==================== HEADER ====================-->
