--- a/index.html
+++ b/index.html
@@ -21,14 +21,14 @@
     <!--=============== CSS ===============-->
     <link rel="stylesheet" href="assets/css/styles.css" />
 
-    <title>Valmad Horlogerie</title>
+    <title>Horlogerie</title>
   </head>
   <body>
     <!--==================== HEADER ====================-->
     <header class="header" id="header">
       <nav class="nav container">
         <a href="#" class="nav__logo">
-          <i class="bx bxs-watch nav__logo-icon"></i> Valmad
+          <i class="bx bxs-watch nav__logo-icon"></i> Maison du Temps
         </a>
 
         <div class="nav__menu" id="nav-menu">
@@ -527,7 +527,9 @@
           </ul>
         </div>
       </div>
-      <span class="footer__copy"> &#169; Tous droits réservés </span>
+      <span class="footer__copy">
+        &#169; Tous droits réservés | Maison du Temps</span
+      >
     </footer>
 
     <!--=============== SCROLL UP ===============-->
